--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <title>Memory Game!</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <h1>Memory Game!</h1>
-    <div id="game">
-    </div>
-    <script src="script.js"></script>
+      <div class="tiles"></div>
   </body>
 </html>
